--- a/ecommerce-proyecto5/src/Pages/home/Home.css
+++ b/ecommerce-proyecto5/src/Pages/home/Home.css
@@ -1,8 +1,12 @@
-.BeerListItem-img {
-  height: auto;
-  max-height: 500px;
-  width: auto;
-  max-width: 150px;
-  align-content: center;
-}
+.publicidad {
+    background-color: black;
+    color: white;
+    text-align: center;
 
+  }
+  
+  
+  
+  
+  
+  
